2009-08-06  Kevin Layer  <layer@franz.com>

    make eli compile in emacs 23 with fewer warnings
	* Doc0.el: insert-file & beginning-of-buffer
	* fi-basic-lep.el: beginning-of-buffer
	* fi-compile.el: don't warn on cl-functions or obsolete functions
	* fi-db.el: defconst's -> defvar's; beginning-of-buffer
	* fi-dmode.el: next-line, previous-line, mapcar, beginning-of-buffer
	* fi-emacs19.el: defconst -> defvar
	* fi-gnu.el: move code to fi-xemacs.el
	* fi-indent.el: add if* for emacs mode (about time!)
	* fi-lep.el: beginning-of-buffer
	* fi-manual.el: mapcar
	* fi-site-init.el: beginning-of-buffer
	* fi-sublisp.el: remove epoch code
	* fi-utils.el: insert-file; squash xemacs code warning;
	beginning-of-buffer; bad error calls (with ~ instead of %) in if*
	* fi-xemacs.el: move code here
	* localfidev.el: beginning-of-buffer

2009-08-06    <layer@HOBART128>

	* Makefile: make sure fi-vers.el is in native format

2009-03-11  Kevin Layer  <layer@gemini.franz.com>

	* fi-compile.el: compile fi-manual.el and fi-manual-data.el

2009-03-11    <layer@HOBART128>

	* emacsdir.pl: fix for 64-bit Windows w/64-bit Perl (32-bit
	  Perl will work fine)

2009-02-26  Kevin Layer  <layer@gemini.franz.com>

	* fi-keys.el (fi::prep-arglist-for-insertion-1): remove
	  setting of `layer' (leftover from debugging)

    spr34506: from Robert P. Goldman:
	* fi-gnu.el (fi::make-backup-file-name-1): define
	  make-backup-file-name-1 on XEmacs versions that don't have
	  it

    spr34451: don't mess with case of symbols being completed in modern mode
	* fi-lep.el (fi:lisp-complete-symbol): use fi::lisp-case-mode
	  to decide whether or not to downcase completions

    rfe8586: from Willem Broekema: add support for hierarchical packages
	* fi-lep.el: augment fi::arglist-lisp-space-1
	* fi-subproc.el: augment fi::subprocess-watch-for-special-commands
	* fi-utils.el: augment fi::get-symbol-at-point

    spr35578: turn on font-lock-mode for CL subprocess buffers, too